fixed ethers import

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "ethers": "^6.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
